# Leaders2022_Hack_Foxhound

./: .dockerignore  .gitignore  .gitmodules  README.md  docker-compose.yml
ML_Denis/: COVID.ipynb
ML_Denis/Pix2Pix/: Create_datasetPix2Pix.py  Pix2Pix_train.ipynb  view_image_train.py
ML_Denis/Pix2Pix/Model/: genrator.json
backend/: .gitignore  pyproject.toml
backend/app/: config.py  generator_simple.py  main.py  tasks.py  utils.py
backend/app/database/: __init__.py  file.py
backend/app/pix2pix/: pix2pix.py  simple.py  utils.py
backend/app/routers/: __init__.py  file.py
backend/app/schemes/: file.py
backend/app/services/: __init__.py  file.py  make_dicom_thumbnail.py
compose/backend/: Dockerfile
compose/nginx/: foxhound.conf
frontend/: .gitignore  package-lock.json  package.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue  consts.js  main.js  store.js
frontend/src/components/: NavBar.vue  dwv.vue
frontend/src/http/: index.d.ts  index.js
frontend/src/plugins/: vuetify.js
frontend/src/router/: index.js
frontend/src/validators/: index.js
frontend/src/views/: FilesTable.vue  Index.vue  UploadFile.vue  ViewGeneration.vue  ViewLabeling.vue
generator_simple/: 3dgeneration_irregular.py  generator_simple.ipynb  generator_simple.py
models/: pix2pix.py  simple.py  utils.py
models/notebooks/: ct-scans-semantic-segmentation.ipynb  moscow-dataset-expansion-infection-segmentation.ipynb  moscow-dataset-expansion-lung-segmentation.ipynb
previewer/: make_dicom_thumbnail.py  requirements.txt  test_dicom_thumbnail.ipynb
