[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Petrov Anton <a.petrov@bi.zone>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
beanie = "^1.12.0"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
ipython = "^8.5.0"
python-multipart = "^0.0.5"
aiofiles = "^22.1.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
