[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Petrov Anton <a.petrov@bi.zone>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
beanie = "^1.12.0"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
ipython = "^8.5.0"
python-multipart = "^0.0.5"
aiofiles = "^22.1.0"
pydicom = "^2.3.0"
Pillow = "^9.3.0"
scikit-learn = "^1.1.3"
numpy = "^1.23.4"
dramatiq = {extras = ["rabbitmq", "watch"], version = "^1.13.0"}
SimpleITK = "^2.2.0"
scikit-image = "^0.19.3"
pandas = "^1.5.1"
albumentations = "^1.3.0"
opencv-python-headless = "^4.6.0.66"
gstools = "^1.4.1"
diplib = "^3.3.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
